# research-job-skills

./: README.md  appsec_skill_miner.py  appsec_skills_analysis.ipynb  pyproject.toml
out_hh/: jobs.jsonl  skills_by_grade.csv  skills_top.csv  skills_top_categorized.csv
out_hh_test/: jobs.jsonl  skills_top.csv
out_with_trudvsem/: jobs.jsonl  skills_by_grade.csv  skills_top.csv
