[project]
name = "research-job-skills"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"ipykernel>=7.1.0",
	"matplotlib>=3.10.8",
	"pandas>=2.3.3",
	"requests>=2.31",
	"seaborn>=0.13.2",
	"wemake-python-styleguide>=1.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
